--- a/menu/login/templates/reg_login.html
+++ b/menu/login/templates/reg_login.html
@@ -10,38 +10,13 @@
 </head>
 <body>
     <div id=wrapper>
-        
-        <div class='register'>
-            {% if messages %}
-            <ul class='messages'>
-                {% for message in messages %}
-                    <li {% if messages.tags %} class="{{message.tags}}" {% endif %}>{{message}}</li>
-                {% endfor %}    
-            </ul>
-            {% endif %}
-
-            <h2>Registration</h2>
-            <form action='/register' method='POST'>
-                {% csrf_token %}
-                <label for='first_name'>First Name:</label>
-                <input type='text' id='first_name' name='first_name'>
-
-                <label for='last_name'>Last Name:</label>
-                <input type='text' id='last_name' name='last_name'>
-
-                <label for='email'>Email:</label>
-                <input type='email' id='email' name='email'>
-
-                <label for='password'>Password:</label>
-                <input type='password' id='password' name='password'>
-
-                <label for='confirm_pw'>Confirm PW:</label>
-                <input type='password' id='confirm_pw' name='confirm_pw'>
-
-                <input type='submit' value='Register'>
-            </form>
-        </div>
-
+        {% if messages %}
+        <ul class='messages'>
+            {% for message in messages %}
+                <li {% if messages.tags %} class="{{message.tags}}" {% endif %}>{{message}}</li>
+            {% endfor %}    
+        </ul>
+        {% endif %}
         <div class='login'>
             <h2>Login</h2>
             <form action='/login' method='POST'>
@@ -53,8 +28,10 @@
                 <input type='password' id='logpassword' name='logpassword'>
 
                 <input type='submit' value='Log In'>
+                <button><a href="/registeration"</button>
             </form>
         </div>
+
     </div>
 </body>
 </html>
