login and registration seperate pages and buttons functioning appropriately

--- a/menu/login/templates/reg_login.html
+++ b/menu/login/templates/reg_login.html
@@ -28,8 +28,9 @@
                 <input type='password' id='logpassword' name='logpassword'>
 
                 <input type='submit' value='Log In'>
-                <button><a href="/registeration"</button>
             </form>
+            <h3>New to Menu Maker?</h3>
+            <button onclick='location.href="/registration"'>Register Here!</button>
         </div>
 
     </div>
