--- a/menu/login/templates/reg_login.html
+++ b/menu/login/templates/reg_login.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration and Login</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/reg_log.css' %}"> 
+    <!-- {% load static %}
+    <link rel="stylesheet" href="{% static 'css/reg_log.css' %}">  -->
 </head>
+
 <body>
     <div id=wrapper>
+        <!-- will display any error messages if the user doesn't match username and password, or if they have not registered -->
         {% if messages %}
         <ul class='messages'>
             {% for message in messages %}
@@ -17,7 +19,9 @@
             {% endfor %}    
         </ul>
         {% endif %}
+
         <div class='login'>
+            <!-- login form -->
             <h2>Login</h2>
             <form action='/login' method='POST'>
                 {% csrf_token %}
@@ -29,6 +33,8 @@
 
                 <input type='submit' value='Log In'>
             </form>
+
+            <!-- for new users to register -->
             <h3>New to Menu Maker?</h3>
             <button onclick='location.href="/registration"'>Register Here!</button>
         </div>
