trying to link home page to a new route that goes to a page that displays the whole grocery list. Not functioning currently

--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -58,6 +58,9 @@
             <ul>
                 <li>Loop through items on the list</li>
             </ul>
+            <button>Quick Add</button>
+            <button on click='location.href="/planner/grocery_list"'>See Full List</button>
+            <a href="/planner/grocery_list">Test</a>
         </div>
 
     </div>
