grocery list route functioning

--- a/menu/planner/templates/grocery_list.html
+++ b/menu/planner/templates/grocery_list.html
@@ -9,6 +9,7 @@
 <body>
     <div id="wrapper">
         <h1>{{user.first_name}}'s Grocery List</h1>
+        <button onclick='location.href="/planner"'>Back</button>
     </div>
 </body>
 </html>
