working on user being able their profile

--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -14,6 +14,8 @@
         <!-- logout route clears session and returns to login page (functioning) -->
         <button onclick='location.href="/logout"'>Logout</button>
 
+        <a href='/account/{{user.id}}'>Edit</a>
+
         <div class="week">
             <!-- this will display the week a looks view with the menu the user has select -->
             <h3>Week of: DATE</h3>
@@ -61,6 +63,7 @@
             <button>Quick Add</button>
             <button onclick='location.href="/planner/grocery_list"'>See Full List</button>
         </div>
+
 
     </div>
 </body>
