user can now edit their profile

--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -14,6 +14,7 @@
         <!-- logout route clears session and returns to login page (functioning) -->
         <button onclick='location.href="/logout"'>Logout</button>
 
+        <!-- account route takes user to page to edit their account (functioning) -->
         <a href='/account/{{user.id}}'>Edit</a>
 
         <div class="week">
