Edit button changed to edit profile so the user will know what they are editing

--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -15,7 +15,7 @@
         <button onclick='location.href="/logout"'>Logout</button>
 
         <!-- account route takes user to page to edit their account (functioning) -->
-        <a href='/account/{{user.id}}'>Edit</a>
+        <a href='/account/{{user.id}}'>Edit Profile</a>
 
         <div class="week">
             <!-- this will display the week a looks view with the menu the user has select -->
