Page and route created to take a user to all the recipes they have added

--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -31,30 +31,32 @@
                     <th>Sunday</th>
                 </thead>
                 <tbody>
-                    <td>Mon Recipe
+                    <td>Mon Recipe HERE
+                        <button onclick='location.href="/logout"'>Add</button>
+                    </td>
+                    <td>Tues Recipe HERE
                         <button>Add</button>
                     </td>
-                    <td>Tues Recipe
+                    <td>Wed Recipe HERE
                         <button>Add</button>
                     </td>
-                    <td>Wed Recipe
+                    <td>Thurs Recipe HERE
                         <button>Add</button>
                     </td>
-                    <td>Thurs Recipe
+                    <td>Fri Recipe HERE
                         <button>Add</button>
                     </td>
-                    <td>Fri Recipe
+                    <td>Sat Recipe HERE
                         <button>Add</button>
                     </td>
-                    <td>Sat Recipe
-                        <button>Add</button>
-                    </td>
-                    <td>Sun Recipe
+                    <td>Sun Recipe HERE
                         <button>Add</button>
                     </td>
                 </tbody>
             </table>
         </div>
+
+        <button onclick='location.href="/planner/user_recipes"'>Browse and Add Recipes</button>
 
         <div class="grocery_list">
             <h3>Grocery List:</h3>
