recipe model ipdated and menu model created

--- a/menu/planner/templates/user_recipes.html
+++ b/menu/planner/templates/user_recipes.html
@@ -23,7 +23,14 @@
             <label for='title'>Title of Recipe:</label>
             <input type='text' id='title' name='title' placeholder='Recipe Name'>
 
-            <label for='ingredient'>Ingredients</label>
+            <label for='prep_time'>Prep Time:</label>
+            <input type='text' id='prep_time' name='cook_time' placeholder='20 minutes'>
+
+            <label for='cook_time'>Cook Time:</label>
+            <input type='text' id='cook_time' name='cook_time' placeholder='1 hour'>
+
+
+            <label for='ingredient'>Ingredients:</label>
             <input type='text' id='ingredient' name='ingredient' placeholder='Ex:1 tbsp Olive Oil'>
 
             <label for='directions'>Directions:</label>
