--- a/menu/planner/templates/user_recipes.html
+++ b/menu/planner/templates/user_recipes.html
@@ -23,15 +23,18 @@
             <label for='title'>Title of Recipe:</label>
             <input type='text' id='title' name='title' placeholder='Recipe Name'>
 
-            <label for='prep_time'>Prep Time:</label>
-            <input type='text' id='prep_time' name='cook_time' placeholder='20 minutes'>
+            <label for='description'>Title of Recipe:</label>
+            <input type='text' id='description' name='description' placeholder='Describe your recipe'>
 
-            <label for='cook_time'>Cook Time:</label>
-            <input type='text' id='cook_time' name='cook_time' placeholder='1 hour'>
+            <label for='prep'>Prep Time:</label>
+            <input type='text' id='prep' name='prep' placeholder='20 minutes'>
+
+            <label for='cook'>Cook Time:</label>
+            <input type='text' id='cook' name='cook' placeholder='1 hour'>
 
 
-            <label for='ingredient'>Ingredients:</label>
-            <input type='text' id='ingredient' name='ingredient' placeholder='Ex:1 tbsp Olive Oil'>
+            <label for='ingredients'>Ingredients:</label>
+            <input type='text' id='ingredients' name='ingredients' placeholder='Ex:1 tbsp Olive Oil'>
 
             <label for='directions'>Directions:</label>
             <input type='text' id='directions' name='directions' placeholder='Ex:Preheat oven to 400'>
