--- a/menu/planner/templates/user_recipes.html
+++ b/menu/planner/templates/user_recipes.html
@@ -44,6 +44,9 @@
     </div>
 
     <p>List of User's Recipes</p>
+    {% for recipe in recipes.objects.all %}
+    <p>{{recipe.title}}</p>
+    {% endfor %}
     
 </body>
 </html>
