--- a/menu/planner/templates/all_recipes.html
+++ b/menu/planner/templates/all_recipes.html
@@ -24,5 +24,10 @@
     </div>
 
     <p>List of All Recipes</p>
+    {% for recipe in all_recipes %}
+    <p>{{recipe.title}}</p>
+    <a href="/planner/delete_recipe/{{recipe.id}}">Delete Recipe</a>
+    {% endfor %}
+    
 </body>
 </html>
