many to many relationship added between User and Recipes

--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -56,7 +56,7 @@
             </table>
         </div>
 
-        <button onclick='location.href="/planner/user_recipes"'>Browse and Add Recipes</button>
+        <button onclick='location.href="/planner/user_recipes/{{user.id}}"'>Browse and Add Recipes</button>
 
         <div class="grocery_list">
             <h3>Grocery List:</h3>
