--- a/menu/planner/templates/user_recipes.html
+++ b/menu/planner/templates/user_recipes.html
@@ -48,7 +48,7 @@
         <h3>{{recipe.title}}</h3>
         <p>{{recipe.description}}</p>
 
-        <a href="/planner/recipe_info/{{recipe.id}}">View Recipe</a> | <a href="/planner/delete_recipe/{{recipe.id}}">Delete Recipe</a>
+        <a href="/planner/recipe_info/{{recipe.id}}">View Recipe</a> | <a href="/planner/edit_recipe/{{recipe.id}}">Edit Recipe</a> | <a href="/planner/delete_recipe/{{recipe.id}}">Delete Recipe</a>
     {% endfor %}
 </body>
 </html>
