--- a/menu/planner/templates/user_recipes.html
+++ b/menu/planner/templates/user_recipes.html
@@ -32,7 +32,7 @@
             <label for='title'>Title of Recipe:</label>
             <input type='text' id='title' name='title' placeholder='Recipe Name'>
 
-            <label for='description'>Title of Recipe:</label>
+            <label for='description'>Description of Recipe:</label>
             <input type='text' id='description' name='description' placeholder='Describe your recipe'>
 
             <label for='prep'>Prep Time:</label>
