validator created for recipe and recipe information is updating, however being saved as ('title') instead of just title

--- a/menu/planner/templates/edit_recipe.html
+++ b/menu/planner/templates/edit_recipe.html
@@ -24,7 +24,7 @@
             <input type='text' id='new_title' name='new_title' placeholder={{recipe.title}}>
 
             <label for='new_description'>Description of Recipe:</label>
-            <input type='text' id='new_description' name='new_description' placeholder={{recipe.}}>
+            <input type='text' id='new_description' name='new_description' placeholder={{recipe.description}}>
 
             <label for='new_prep'>Prep Time:</label>
             <input type='text' id='new_prep' name='new_prep' placeholder={{recipe.prep}}>
