ability to edit a recipe and validator fully functioning

--- a/menu/planner/templates/edit_recipe.html
+++ b/menu/planner/templates/edit_recipe.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Button will take user back to the home page -->
+    <button onclick='location.href="/planner/all_recipes"'>Back</button>
+
     <!-- error messages will appear here (functioning)-->
     {% if messages %}
     <ul class='messages'>
