--- a/menu/login/templates/register.html
+++ b/menu/login/templates/register.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Register </title>
 </head>
-
 <body>
     <div id=wrapper>
         <div class='register'>
+            <div class="title">
+                <h2>Welcome to Menu Maker!</h2>
+                <h3>***DESCRIPTION OF PROJECT***</h3>
+                <p>To Join Register Below</p>
+            </div>
+        
             <!-- will display messages if user does not meet registration requirements -->
             {% if messages %}
             <ul class='messages'>
@@ -19,7 +24,6 @@
             </ul>
             {% endif %}
         
-            <h2>Registration</h2>
 
             <!-- take user back to login page -->
             <button onclick='location.href="/"'>Back</button>
