--- a/menu/planner/templates/all_recipes.html
+++ b/menu/planner/templates/all_recipes.html
@@ -7,57 +7,59 @@
     <title>All Recipes in Menu maker</title>
 </head>
 <body>
-    <div class="nav_bar">
-        <h3>Menu Maker</h3>
-        <!-- Button will take user back to the home page -->
-        <button onclick='location.href="/planner"'>Home</button>
+    <div id="wrapper">
+        <div class="nav_bar">
+            <h3>Menu Maker</h3>
+            <!-- Button will take user back to the home page -->
+            <button onclick='location.href="/planner"'>Home</button>
 
-        <!-- all_recipes will take you to all the recipes added by all users -->
-        <a href="/planner/user_recipes/{{user.id}}">Your Recipes</a> |
-        <!-- favorite_recipes will take the user to the recipes they have favorited -->
-        <a href="/planner/favorite_recipes">Favorite Recipes</a>
-    </div>
+            <!-- all_recipes will take you to all the recipes added by all users -->
+            <a href="/planner/user_recipes/{{user.id}}">Your Recipes</a> |
+            <!-- favorite_recipes will take the user to the recipes they have favorited -->
+            <a href="/planner/favorite_recipes">Favorite Recipes</a>
+        </div>
 
-    <div class = 'add_recipe'>
-        <h2>Add a Recipe</h2>
-        <form action='/planner/add_recipe/{{user.id}}' method="POST">
-            {% csrf_token %}
-            <label for='title'>Title of Recipe:</label>
-            <input type='text' id='title' name='title' placeholder='Recipe Name'>
+        <div class = 'add_recipe'>
+            <h2>Add a Recipe</h2>
+            <form action='/planner/add_recipe/{{user.id}}' method="POST">
+                {% csrf_token %}
+                <label for='title'>Title of Recipe:</label>
+                <input type='text' id='title' name='title' placeholder='Recipe Name'>
 
-            <label for='description'>Description of Recipe:</label>
-            <input type='text' id='description' name='description' placeholder='Describe your recipe'>
+                <label for='description'>Description of Recipe:</label>
+                <input type='text' id='description' name='description' placeholder='Describe your recipe'>
 
-            <label for='prep'>Prep Time:</label>
-            <input type='text' id='prep' name='prep' placeholder='20 minutes'>
+                <label for='prep'>Prep Time:</label>
+                <input type='text' id='prep' name='prep' placeholder='20 minutes'>
 
-            <label for='cook'>Cook Time:</label>
-            <input type='text' id='cook' name='cook' placeholder='1 hour'>
+                <label for='cook'>Cook Time:</label>
+                <input type='text' id='cook' name='cook' placeholder='1 hour'>
 
 
-            <label for='ingredients'>Ingredients:</label>
-            <input type='text' id='ingredients' name='ingredients' placeholder='Ex:1 tbsp Olive Oil'>
+                <label for='ingredients'>Ingredients:</label>
+                <input type='text' id='ingredients' name='ingredients' placeholder='Ex:1 tbsp Olive Oil'>
 
-            <label for='directions'>Directions:</label>
-            <input type='text' id='directions' name='directions' placeholder='Ex:Preheat oven to 400'>
+                <label for='directions'>Directions:</label>
+                <input type='text' id='directions' name='directions' placeholder='Ex:Preheat oven to 400'>
 
-            <input type='submit' value = "Add Recipe">
-        </form>
-    </div>
+                <input type='submit' value = "Add Recipe">
+            </form>
+        </div>
 
-    <h2>All Recipes on Menu Maker</h2>
-    {% for recipe in all_recipes %}
-    <div class="recipe">
-        <h3>{{recipe.title}}</h3>
-        <p>{{recipe.description}}</p>
-        <!-- Link to view recipe (functioning) -->
-        <a href="/planner/recipe_info/{{recipe.id}}">View Recipe</a>  
-        {% for user in user_recipes %}
-            {% if user.id == recipe.id %}
-                | <a href="/planner/delete/{{recipe.id}}">Delete</a> | <a href="/planner/edit_recipe/{{recipe.id}}">Edit</a>
-            {% endif %}
+        <h2>All Recipes on Menu Maker</h2>
+        {% for recipe in all_recipes %}
+        <div class="recipe">
+            <h3>{{recipe.title}}</h3>
+            <p>{{recipe.description}}</p>
+            <!-- Link to view recipe (functioning) -->
+            <a href="/planner/recipe_info/{{recipe.id}}">View Recipe</a>  
+            {% for user in user_recipes %}
+                {% if user.id == recipe.id %}
+                    | <a href="/planner/delete/{{recipe.id}}">Delete</a> | <a href="/planner/edit_recipe/{{recipe.id}}">Edit</a>
+                {% endif %}
+            {% endfor %}
+        </div>
         {% endfor %}
-    </div>
-    {% endfor %}
+</div>
 </body>
 </html>
