--- a/menu/planner/templates/favorite_recipes.html
+++ b/menu/planner/templates/favorite_recipes.html
@@ -7,42 +7,48 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>{{user.first_name}}'s Favorite Recipes</h2>
-    <!-- Button will take user back to the home page -->
-    <button onclick='location.href="/planner"'>Back</button>
+    <div id="wrapper">
+        <div class="nav_bar">
+            <h3>Menu Maker</h3>
+            <!-- Button will take user back to the home page -->
+            <button onclick='location.href="/planner"'>Home</button>
 
-    <!-- all_recipes will take you to all the recipes added by all users -->
-    <a href="/planner/user_recipes/{{user.id}}">Your Recipes</a>
-    <!-- favorite_recipes will take the user to the recipes they have favorited -->
-    <a href="/planner/all_recipes">All Recipes</a>
+            <!-- all_recipes will take you to all the recipes added by all users -->
+            <a href="/planner/user_recipes/{{user.id}}">Your Recipes</a> |
+            <!-- favorite_recipes will take the user to the recipes they have favorited -->
+            <a href="/planner/all_recipes">All Recipes</a>
+        </div>
 
-    <div class = 'add_recipe'>
-        <h3>Add Recipe</h3>
-        <form action='/planner/add_recipe/{{user.id}}' method="POST">
-            {% csrf_token %}
-            <label for='title'>Title of Recipe:</label>
-            <input type='text' id='title' name='title' placeholder='Recipe Name'>
+        <div class = 'add_recipe'>
+            <h3>Add a Recipe</h3>
+            <form action='/planner/add_recipe/{{user.id}}' method="POST">
+                {% csrf_token %}
+                <label for='title'>Title of Recipe:</label>
+                <input type='text' id='title' name='title' placeholder='Recipe Name'>
 
-            <label for='description'>Description of Recipe:</label>
-            <input type='text' id='description' name='description' placeholder='Describe your recipe'>
+                <label for='description'>Description of Recipe:</label>
+                <input type='text' id='description' name='description' placeholder='Describe your recipe'>
 
-            <label for='prep'>Prep Time:</label>
-            <input type='text' id='prep' name='prep' placeholder='20 minutes'>
+                <label for='prep'>Prep Time:</label>
+                <input type='text' id='prep' name='prep' placeholder='20 minutes'>
 
-            <label for='cook'>Cook Time:</label>
-            <input type='text' id='cook' name='cook' placeholder='1 hour'>
+                <label for='cook'>Cook Time:</label>
+                <input type='text' id='cook' name='cook' placeholder='1 hour'>
 
 
-            <label for='ingredients'>Ingredients:</label>
-            <input type='text' id='ingredients' name='ingredients' placeholder='Ex:1 tbsp Olive Oil'>
+                <label for='ingredients'>Ingredients:</label>
+                <input type='text' id='ingredients' name='ingredients' placeholder='Ex:1 tbsp Olive Oil'>
 
-            <label for='directions'>Directions:</label>
-            <input type='text' id='directions' name='directions' placeholder='Ex:Preheat oven to 400'>
+                <label for='directions'>Directions:</label>
+                <input type='text' id='directions' name='directions' placeholder='Ex:Preheat oven to 400'>
 
-            <input type='submit' value = "Add Recipe">
-        </form>
+                <input type='submit' value = "Add Recipe">
+            </form>
+        </div>
+
+        <div class="recipe">
+            <h2>{{user.first_name}}'s Favorite Recipes</h2>
+        </div>
     </div>
-
-    <p>List of Favorite Recipes</p>
 </body>
 </html>
