logout option added to all templates

--- a/menu/planner/templates/favorite_recipes.html
+++ b/menu/planner/templates/favorite_recipes.html
@@ -17,6 +17,9 @@
             <a href="/planner/user_recipes/{{user.id}}">Your Recipes</a> |
             <!-- favorite_recipes will take the user to the recipes they have favorited -->
             <a href="/planner/all_recipes">All Recipes</a>
+            
+            <!-- logout route clears session and returns to login page (functioning) -->
+            <button onclick='location.href="/logout"'>Logout</button>
         </div>
 
         <div class = 'add_recipe'>
