--- a/menu/planner/templates/recipe_info.html
+++ b/menu/planner/templates/recipe_info.html
@@ -7,8 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- logout route clears session and returns to login page (functioning) -->
+    <div id="wrapper">
+        <div class="nav_bar">
+            <h3>Menu Maker</h3>
+            <!-- Button will take user back to the home page -->
+            <button onclick='location.href="/planner"'>Home</button>
+
+            <!-- favorite_recipes will take the user to the recipes they have favorited -->
+            <a href="/planner/all_recipes">All Recipes</a> |
+            <!-- all_recipes will take you to all the recipes added by all users -->
+            <a href="/planner/user_recipes/{{user.id}}">Your Recipes</a> |
+            <!-- favorite_recipes will take the user to the recipes they have favorited -->
+            <a href="/planner/favorite_recipes">Favorite Recipes</a>
+
+                <!-- logout route clears session and returns to login page (functioning) -->
     <button onclick='location.href="/logout"'>Logout</button>
+        </div>
+
 
     <!-- Button will take user back to the home page -->
     <button onclick='location.href="/planner/all_recipes"'>Back to Recipes</button>
