recipe info template updated with nav bar and wrapper id

--- a/menu/planner/templates/recipe_info.html
+++ b/menu/planner/templates/recipe_info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Information</title>
 </head>
 <body>
     <div id="wrapper">
@@ -20,28 +20,28 @@
             <!-- favorite_recipes will take the user to the recipes they have favorited -->
             <a href="/planner/favorite_recipes">Favorite Recipes</a>
 
-                <!-- logout route clears session and returns to login page (functioning) -->
-    <button onclick='location.href="/logout"'>Logout</button>
+            <!-- logout route clears session and returns to login page (functioning) -->
+            <button onclick='location.href="/logout"'>Logout</button>
         </div>
 
-
-    <!-- Button will take user back to the home page -->
-    <button onclick='location.href="/planner/all_recipes"'>Back to Recipes</button>
-    
-    <h1>{{recipe.title}}</h1>
-    <h4>{{recipe.description}}</h4>
-    <p>Prep Time: {{recipe.prep}}</p>
-    <p>Cook Time: {{recipe.cook}}</p>
-    <ul>Ingredients:
-        <li>{{recipe.ingredients}}</li>
-    </ul>
-    <ol>Directions:
-        <li>{{recipe.directions}}</li>
-    </ol>
-    {% for user in user_recipes %}
-        {% if user.id == recipe.id %}
-            <a href="/planner/delete/{{recipe.id}}">Delete</a> | <a href="/planner/edit_recipe/{{recipe.id}}">Edit</a>
-        {% endif %}
-    {% endfor %}
+        
+        <div class="recipe">
+            <h1>{{recipe.title}}</h1>
+            <h4>{{recipe.description}}</h4>
+            <p>Prep Time: {{recipe.prep}}</p>
+            <p>Cook Time: {{recipe.cook}}</p>
+            <ul>Ingredients:
+                <li>{{recipe.ingredients}}</li>
+            </ul>
+            <ol>Directions:
+                <li>{{recipe.directions}}</li>
+            </ol>
+            {% for user in user_recipes %}
+                {% if user.id == recipe.id %}
+                    <a href="/planner/delete/{{recipe.id}}">Delete</a> | <a href="/planner/edit_recipe/{{recipe.id}}">Edit</a>
+                {% endif %}
+            {% endfor %}
+        </div>
+    </div>
 </body>
 </html>
